@@ -5,8 +5,9 @@ use warnings;
 
 use base 'DBIx::Class';
 
-use Carp::Clan qw/^DBIx::Class/;
 use DBIx::Class::Exception;
+use Carp::Clan qw/^DBIx::Class/;
+use namespace::clean;
 
 # not importing first() as it will clash with our own method
 use List::Util ();
